# d210_ai_trip_planner-se

./: .env-example  README.md
agents/: .cache.sqlite  README.md  output_log.txt  pyproject.toml  pytest.ini  report.md  run_me.sh
agents/data/: sample-activity.json  sample-itinerary.json
agents/db/: chroma.sqlite3
agents/knowledge/: rt_trip_planner_hotspots.csv
agents/research/: csv_file_rag_search.py  custom_tool.py  weather_pd_search_tool.py
agents/src/: output_log.txt
agents/src/db/: chroma.sqlite3
agents/src/rt_ai_trip_planner/: crew.py  main.py  model.py
agents/src/rt_ai_trip_planner/config/: agents.yaml  tasks.yaml
agents/src/rt_ai_trip_planner/tools/: activity_pd_search_tool.py  attractions_search_tool.py  mocked_weather_tool.py  restaurants_search_tool.py  route_planning_input_generator_tool.py  route_planning_input_generator_with_container_tool.py  route_planning_input_loader_tool.py  weather_tool.py
agents/src/rt_ai_trip_planner/utils/: app_logging.py  crew_io_utils.py  geocodes_utils.py  guardrails_utils.py  map_utils.py  reqs_builder_utils.py
agents/tests/: test_crew.py  test_model.py
agents/tests/tools/: test_activity_pd_search_tool.py  test_weather_tool.py
agents/tests/utils/: test_geocodes_utils.py  test_reqs_builder_utils.py
backend/: Dockerfile.backend  local_testing.md  main.py  models.py  requirements.txt  run_backend.sh
common/: model.py  sample-itinerary.json  sample_itinerary_la.json  sample_itinerary_sf.json
db/: chroma.sqlite3
evaluation/: .cache.sqlite  generate_examples.py
frontend/: Dockerfile.frontend  pyproject.toml  requirements.txt  run_frontend.sh
frontend/src/: main.py
infra/: deployment-backend-gke.yaml  deployment-backend.yaml  (+5 more)
(+19 files in other folders)
