[project]
name = "rt_ai_trip_planner"
version = "0.1.0"
description = "rt-ai-trip-planner using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "langtrace-python-sdk (>=3.6.2,<4.0.0)",
    "openmeteo-requests (>=1.3.0,<2.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "retry-requests (>=2.0.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "googlemaps (>=4.10.0,<5.0.0)",
]

[project.scripts]
rt_ai_trip_planner = "rt_ai_trip_planner.main:run"
run_crew = "rt_ai_trip_planner.main:run"
train = "rt_ai_trip_planner.main:train"
replay = "rt_ai_trip_planner.main:replay"
test = "rt_ai_trip_planner.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
