[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = {version = "^0.112.2", extras = ["all"]}
joblib = "1.4.2"
scikit-learn = "1.5.2"
fastapi-cache2 = {version = "0.1.9", extras = ["redis"]} 
crewai = "^0.100.1"
crewai-tools = "^0.33.0"
streamlit = "^1.44.0"
requests = "^2.32.3"
folium = "^0.19.5"
geopy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.2"
pytest-asyncio = "0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pytest]
asyncio_default_fixture_loop_scope = "function"
